sign in page slider animation

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
 
 
 
+
+
+
                 <div class="col-11 col-md-7 col-lg-8 px-1 px-md-5">
-                    <div class="row logSlider px-0 px-md-5">
+                    <div class="row logSlider">
                         <div class="px-3 py-5 pt-md-5 pb-md-0">
                             <div class="row">
                                 <div class="col-12 text-left my-2 my-md-0">
                                     <div>
                                         <span class="pr-3 mini-heading">Sign Up to</span>
-                                        <div class="position-relative big-heading d-inline ml14 ">
+                                        <div class="position-relative big-heading d-inline-block ml9  ">
                                             <span class="text-wrapper">
-                                                <span class="letters">
-                                                    Edit Projects
-                                                </span>
-                                                <span class="line"></span>
+                                                <span class="letters">Edit Projects</span>
                                             </span>
                                         </div>
                                     </div>
@@ -86,12 +86,9 @@
                             <div class="row">
                                 <div class="col-12 text-left">
                                     <div><span class="pr-3 mini-heading">Sign Up to</span>
-                                        <div class="position-relative big-heading d-inline ml14 ">
+                                        <div class="position-relative big-heading d-inline-block ml9  ">
                                             <span class="text-wrapper">
-                                                <span class="letters">
-                                                    Add New Projects
-                                                </span>
-                                                <span class="line"></span>
+                                                <span class="letters">Add New Projects</span>
                                             </span>
                                         </div>
                                     </div>
@@ -109,12 +106,9 @@
                             <div class="row">
                                 <div class="col-12 text-left">
                                     <div><span class="pr-3 mini-heading">Sign Up to</span>
-                                        <div class="position-relative big-heading d-inline ml14 ">
+                                        <div class="position-relative big-heading d-inline-block ml9  ">
                                             <span class="text-wrapper">
-                                                <span class="letters">
-                                                    Have A Dashboard
-                                                </span>
-                                                <span class="line"></span>
+                                                <span class="letters">Have a Dashboard</span>
                                             </span>
                                         </div>
                                     </div>
@@ -130,6 +124,8 @@
                         </div>
                     </div>
                 </div>
+
+
 
                 <div class="col-11 col-md-5 col-lg-4 form-card border form-container p-5">
                     <h5>Create New Account!</h5>
