sign in title adjustment

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 
                 <div class="col-11 col-md-5 col-lg-4 form-card border form-container p-5">
-                    <h5 class="big-heading">Create New Account!</h5>
+                    <h4 class="font-weight-bold">Create New Account!</h4>
                     <div class="form-row">
                         <v-form class="w-100">
                             <v-container>
