--- a/Plan.html
+++ b/Plan.html
@@ -24,7 +24,7 @@
     <div class=" container-fluid bg-black">
         <div class="container">
             <div class="navbar navbar-expand-lg ">
-                <a class="navbar-brand col-4 col-md-2" href="#">
+                <a class="navbar-brand col-3 col-md-1 p-0" href="#">
                     <img src="./assets/logo.png" alt="logo" class="img-fluid">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
