removing vue from index

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="./css/materialize-src/css/materialize.css">
+
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
@@ -50,120 +53,99 @@
         </div>
 
     </div>
-    <v-app id="app">
-        <div class="container mb-5 mt-0 my-md-5">
-            <div class="row justify-content-center">
-                <div class="col-11 col-md-7 col-lg-6 px-1 px-md-5">
-                    <div class="row logSlider">
-                        <div class="px-3 py-5 pt-md-5 pb-md-0">
-                            <div class="row">
-                                <div class="col-12 text-left my-2 my-md-0">
-                                    <div>
-                                        <span class="pr-3 mini-heading">Sign Up to</span>
-                                        <div class="position-relative big-heading d-inline-block ml9  ">
-                                            <span class="text-wrapper">
-                                                <span class="letters">Edit Projects</span>
-                                            </span>
-                                        </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-11 col-md-7 col-lg-6 px-1 px-md-5">
+                <div class="row logSlider">
+                    <div class="px-3 py-5 pt-md-5 pb-md-0">
+                        <div class="row">
+                            <div class="col-12 text-left my-2 my-md-0">
+                                <div>
+                                    <span class="pr-3 mini-heading">Sign Up to</span>
+                                    <div class="position-relative big-heading d-inline-block ml9  ">
+                                        <span class="text-wrapper">
+                                            <span class="letters">Edit Projects</span>
+                                        </span>
                                     </div>
-                                </div>
-                                <div class="col-12 imgContainer">
-                                    <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
-                                        <img src="./assets/sliderImg1.png" alt="sliderimg"
-                                            class="img-fluid h-100 w-100 sliderImg">
-                                    </div>
-
                                 </div>
                             </div>
-                        </div>
-                        <div class="px-3 py-5 pt-md-5 pb-md-0">
-                            <div class="row">
-                                <div class="col-12 text-left">
-                                    <div><span class="pr-3 mini-heading">Sign Up to</span>
-                                        <div class="position-relative big-heading d-inline-block ml9  ">
-                                            <span class="text-wrapper">
-                                                <span class="letters">Add New Projects</span>
-                                            </span>
-                                        </div>
-                                    </div>
+                            <div class="col-12 imgContainer">
+                                <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
+                                    <img src="./assets/sliderImg1.png" alt="sliderimg"
+                                        class="img-fluid h-100 w-100 sliderImg">
                                 </div>
-                                <div class="col-12 imgContainer">
-                                    <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
-                                        <img src="./assets/sliderImg2.jpg" alt="sliderimg"
-                                            class="img-fluid h-100 w-100 sliderImg">
-                                    </div>
 
-                                </div>
                             </div>
                         </div>
-                        <div class="px-3 py-5 pt-md-5 pb-md-0">
-                            <div class="row">
-                                <div class="col-12 text-left">
-                                    <div><span class="pr-3 mini-heading">Sign Up to</span>
-                                        <div class="position-relative big-heading d-inline-block ml9  ">
-                                            <span class="text-wrapper">
-                                                <span class="letters">Have a Dashboard</span>
-                                            </span>
-                                        </div>
+                    </div>
+                    <div class="px-3 py-5 pt-md-5 pb-md-0">
+                        <div class="row">
+                            <div class="col-12 text-left">
+                                <div><span class="pr-3 mini-heading">Sign Up to</span>
+                                    <div class="position-relative big-heading d-inline-block ml9  ">
+                                        <span class="text-wrapper">
+                                            <span class="letters">Add New Projects</span>
+                                        </span>
                                     </div>
                                 </div>
-                                <div class="col-12 imgContainer">
-                                    <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
-                                        <img src="./assets/sliderImg3.jpg" alt="sliderimg"
-                                            class="img-fluid h-100 w-100 sliderImg">
-                                    </div>
+                            </div>
+                            <div class="col-12 imgContainer">
+                                <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
+                                    <img src="./assets/sliderImg2.jpg" alt="sliderimg"
+                                        class="img-fluid h-100 w-100 sliderImg">
+                                </div>
 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="px-3 py-5 pt-md-5 pb-md-0">
+                        <div class="row">
+                            <div class="col-12 text-left">
+                                <div><span class="pr-3 mini-heading">Sign Up to</span>
+                                    <div class="position-relative big-heading d-inline-block ml9  ">
+                                        <span class="text-wrapper">
+                                            <span class="letters">Have a Dashboard</span>
+                                        </span>
+                                    </div>
                                 </div>
+                            </div>
+                            <div class="col-12 imgContainer">
+                                <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
+                                    <img src="./assets/sliderImg3.jpg" alt="sliderimg"
+                                        class="img-fluid h-100 w-100 sliderImg">
+                                </div>
+
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="col-11 col-md-5 col-lg-6">
-                    <div class="row justify-content-center">
-                        <div class="col-11 col-md-8 form-card border form-container p-5">
-                            <h4 class="font-weight-bold">Create New Account!</h4>
-                            <div class="form-row">
-                                <v-form class="w-100">
-                                    <v-container>
-                                        <v-row>
-                                            <div class="col-12">
-                                                <v-text-field label="Email">
-                                                </v-text-field>
-                                            </div>
-                                            <div class="col-12">
-                                                <v-text-field label="Password"
-                                                    :append-icon="show1 ? 'mdi-eye' : 'mdi-eye-off'"
-                                                    :type="show1 ? 'text' : 'password'" @click:append="show1 = !show1">
-                                                </v-text-field>
-                                            </div>
-
-                                            <div class="col-12 px-0 mx-0">
-                                                <p class="m-0 small-text color-one">
-                                                    Forget Password?
-                                                </p>
-                                            </div>
-                                            <div class="col-12 px-0 mx-0 mt-0 pt-0 mt-md-5 pt-md-5">
-                                                <div class="btn btn-primary">Sign In</div>
-                                                <div class="my-2 col-12 px-0">
-                                                    <span class="small-text"> Have no account? </span><a
-                                                        href="./SignUp.html" class="color-one">Sign
-                                                        Up</a>
-                                                </div>
-                                            </div>
-                                        </v-row>
-                                    </v-container>
-                                </v-form>
+            <div class="col-11 col-md-5 col-lg-6">
+                <div class="row justify-content-center">
+                    <div class="col-11 col-md-8 form-card border form-container p-5">
+                        <h5 class="font-weight-bold">Create New Account!</h5>
+                        <div class="form-row no-gutters">
+                            <div class="input-field col-12">
+                                <input id="email" type="text">
+                                <label for="last_name">Email</label>
+                            </div>
+                            <div class="input-field col-12">
+                                <input id="password" type="password">
+                                <label for="password">Password</label>
                             </div>
                         </div>
+                        <p class="small-text color-one font-weight-600">Forgot Password?</p>
+                        <div class="btn btn-primary my-4">Sign In</div>
+                        <div class="small-text text-muted">Have no account? <span class="color-one">Sign Up</span></div>
                     </div>
-
-
                 </div>
+
 
             </div>
+
         </div>
-    </v-app>
+    </div>
 
 
     <div class="container-fluid bg-black text-muted">
@@ -174,8 +156,8 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vuetify/2.3.4/vuetify.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
@@ -188,17 +170,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 
-    <script>
-        new Vue({
-            el: '#app',
-            vuetify: new Vuetify(),
-            data: {
-                show1: false
-            }
 
-        })
-
-    </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="./js/main.js"></script>
