compeletly removed vue and vuetify - rebuilt the form

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-11 col-md-7 col-lg-6 px-1 px-md-5">
+            <div class="col-11 col-md-6 px-1 px-md-5">
                 <div class="row logSlider">
                     <div class="px-3 py-5 pt-md-5 pb-md-0">
                         <div class="row">
@@ -118,23 +118,24 @@
                 </div>
             </div>
 
-            <div class="col-11 col-md-5 col-lg-6">
+            <div class="col-11 col-md-6">
                 <div class="row justify-content-center">
                     <div class="col-11 col-md-8 form-card border form-container p-5">
-                        <h5 class="font-weight-bold">Create New Account!</h5>
+                        <h5 class="font-weight-bold">Welcom to ARooH!</h5>
                         <div class="form-row no-gutters">
                             <div class="input-field col-12">
                                 <input id="email" type="text">
-                                <label for="last_name">Email</label>
+                                <label class="small-text" for="last_name">Email</label>
                             </div>
                             <div class="input-field col-12">
                                 <input id="password" type="password">
-                                <label for="password">Password</label>
+                                <label class="small-text" for="password">Password</label>
                             </div>
                         </div>
                         <p class="small-text color-one font-weight-600">Forgot Password?</p>
                         <div class="btn btn-primary my-4">Sign In</div>
-                        <div class="small-text text-muted">Have no account? <span class="color-one">Sign Up</span></div>
+                        <div class="small-text text-muted">Have no account? <a href="./SignUp.html"
+                                class="color-one">Sign Up</a></div>
                     </div>
                 </div>
 
