--- a/SignUp.html
+++ b/SignUp.html
@@ -16,9 +16,9 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <script src="https://kit.fontawesome.com/8ed589f1d4.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/materialize-src/css/materialize.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -48,7 +48,7 @@
         </div>
 
     </div>
-    <div class="container mb-5 mt-0 my-md-5">
+    <div class="container">
         <div class="row justify-content-center position-relative">
 
             <div class="col-11 col-md-6 fixed-slider">
@@ -117,7 +117,98 @@
                 </div>
             </div>
 
+            <div class="col-11 col-md-6">
+                <div class="row justify-content-center">
+                    <div class="col-11 col-md-10 form-card border form-container p-5">
+                        <h5 class="font-weight-bold">Create New Account!</h5>
+                        <div class="form-row no-gutters border-bottom">
+                            <div class="input-field col-12 col-md-6">
+                                <input id="first-name" type="text">
+                                <label class="small-text font-weight-600" for="first-name">First Name</label>
+                            </div>
+                            <div class="input-field col-12 col-md-6">
+                                <input id="last-name" type="text">
+                                <label class="small-text font-weight-600" for="last-name">Last Name</label>
+                            </div>
+                            <form action="#">
+                                <p>
+                                    <span class="text-muted">Gender</span>
+                                    <label>
+                                        <input name="group1" type="radio" />
+                                        <span>Male</span>
+                                    </label>
+                                    <label>
+                                        <input name="group1" type="radio" />
+                                        <span>Female</span>
+                                    </label>
+                                </p>
+                            </form>
+                        </div>
+                        <div class="form-row no-gutters border-bottom">
+                            <div class="input-field col-12 col-md-6">
+                                <input id="email" type="email">
+                                <label class="small-text font-weight-600" for="email">Email</label>
+                            </div>
+                            <div class="input-field col-12 col-md-6">
+                                <input id="phone" type="text">
+                                <label class="small-text font-weight-600" for="phone">Phone Number</label>
+                            </div>
+                            <div class="input-field col-12 col-md-6">
+                                <input id="enterPassword" type="password">
+                                <label class="small-text font-weight-600" for="last_name">Password</label>
+                            </div>
+                            <div class="input-field col-12 col-md-6">
+                                <input id="confirmPassword" type="password">
+                                <label class="small-text font-weight-600" for="confirmPassword">Confirm Password</label>
+                            </div>
+                        </div>
+                        <div class="form-row no-gutters">
+                            <div class="input-field col-12 col-md-6">
+                                <input id="company" type="text">
+                                <label class="small-text font-weight-600" for="email">Company Name</label>
+                            </div>
+                            <div class="col-0 col-md-6">
+                            </div>
+                            <div class="input-field col-12 col-md-6 primary--text">
+                                <label class="position-relative small-text font-weight-600">Industry</label>
+                                <select>
+                                    <option value="1">Retail</option>
+                                    <option value="2">Education</option>
+                                    <option value="3">Food and Beverage</option>
+                                    <option value="4">Entertainment</option>
+                                    <option value="5">Printing</option>
+                                    <option value="6">Advertising</option>
 
+                                </select>
+                            </div>
+                            <div class="input-field col-12 col-md-6 primary--text">
+                                <label class="position-relative small-text font-weight-600">Role</label>
+
+                                <select>
+                                    <option value="1">Educator</option>
+                                    <option value="2">Manager</option>
+                                    <option value="3">Marketer</option>
+                                    <option value="4">Product Manager</option>
+                                    <option value="5">Sales</option>
+                                    <option value="6">Student</option>
+                                    <option value="7">Other</option>
+
+                                </select>
+
+                            </div>
+
+
+
+                        </div>
+                        <p class="small-text color-one font-weight-600">Forgot Password?</p>
+                        <div class="btn btn-primary my-4">Sign Up</div>
+                        <div class="small-text text-muted">Have an account? <a href="./index.html"
+                                class="color-one">Sign In</a></div>
+                    </div>
+                </div>
+
+
+            </div>
 
 
 
@@ -125,7 +216,7 @@
         </div>
     </div>
 
-    <div class="container-fluid bg-black text-muted">
+    <div class="container-fluid bg-black text-muted mt-3">
         <div class="row">
             <div class="col-12 align-self-center">
                 <p class="small-text m-0">Copyright Â© 2020 Desing by O-Projects</p>
@@ -134,10 +225,11 @@
     </div>
 
 
-
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
     <script type="text/javascript" src="slick/slick.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -148,6 +240,12 @@
         crossorigin="anonymous"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('select').formSelect();
+        });
+
+    </script>
     <script src="./js/main.js"></script>
 </body>
 
